was added hash key for bundles and added plugin html

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "https://github.com/FilimonovKostya/Webpack/issues"
   },
   "homepage": "https://github.com/FilimonovKostya/Webpack#readme",
-  "dependencies": {
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
