--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "csv-loader": "^3.0.3",
     "normalize.css": "^8.0.1",
     "xml-loader": "^1.2.1"
   }
